@@ -1,2 +1,5 @@
 # DavaBahti
 This repo was created for final exam for "Software Design Patterns"
+
+VM options:
+--module-path "path to library" --add-modules javafx.controls,javafx.fxml
